- translation support
- ported to gtk+ 2.8 and gnome 2.10
- added LUKS file import/export [John Lenz]
- added SplashID CSV file import [Devan Goodwin]
- cleaned up preferences dialog
- only show Revelation files by default in open and save dialogs

Bugfixes:
- improved error detection during file saving
- handle errors while loading icons [Wade Berrier]
- scale icons with improper sizes
- password generator now always avoids ambiguous characters
- password checker and generator follow "show passwords" preference
- don't use passwords in default goto commands
- HIG fixes
- added missing config.guess and config.sub autoconf files

Translations:
- added chinese translation [Dancefire]
- added french translation [Gilles Accad]
- added german translation [Christian Sagmueller]
- added swedish translation [Daniel Nylander]

Code changes:
- improved build scripts
- generate ChangeLog from subversion log during make dist
- removed gnomemisc module
- don't use deprecated gnome-python modules
- moved convert_entry_generic() to the Entry.convert_generic() method


2006-02-06: Revelation 0.4.7
============================

Bugfixes:
- don't crash when unlocking file
- ignore errors when automatically reloading file in applet
- avoid hanging on missing network mounts when opening file
- build pyc/pyo files correctly when using DESTDIR with make install


2006-01-26: Revelation 0.4.6
============================

New features:
- improved the searchbar, and use it instead of find dialog
- new applet option to show/hide search entry
- use icons instead of colors in password entries to indicate strength
- added Shannon entropy test and other improvements to password checker

Bugfixes:
- fixed drag and drop undo/redo crashes
- don't initialize python modules during configure checks
- strip xml entities from password on clipboard copy or drag/drop
- fix crash in Password Safe import/export with fields longer than 256 chars
- use full path when starting Revelation from applet